# typeflow

./: .env.example  .gitignore  .prettierignore  .spark-initial-sha  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  ai_studio_code.csv  analyze-bundle.js  bun.lockb  eslint.config.mjs  index.html  package-lock.json  package.json  render.yaml  runtime.config.json  tsconfig.json  vite-env.d.ts  vite.analyze.ts  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
.serena/: project.yml
data/: typeflow.db
data/presets/: advanced-sentences.json  basic-japanese.json  programming.json  sushida-10000.json
docs/: CI_CD_IMPLEMENTATION_EXAMPLES.md  CI_CD_IMPROVEMENT_PROPOSAL.md  CI_CD_PHASE1_COMPLETE.md  CODE_OF_CONDUCT-ja.md  CONTRIBUTING-ja.md  LOCAL_DEVELOPMENT.md  README-ja.md  STEALTH_MODE.md  SYNC_SETUP-ja.md  TODO-ja.md  TURSO_MIGRATION.md  TURSO_SETUP.md  i18n-specification.md  word-selection-algorithm-proposal.md
docs/auth/: CLERK_PRODUCTION_SETUP.md  (+8 more)
migrations/: 0001_initial.sql  0002_add_min_time_limit_by_difficulty.sql  0003_add_presets_tables.sql  0004_add_user_presets_tables.sql  0005_add_users_table.sql  0006_add_user_id_to_tables.sql
public/: _redirects
scripts/: cli-practice.ts  dev.ts  migrate.ts  preset-manager.ts  setup-local-db.ts  turso-query.sh
server/: index.ts
src/: App.tsx  ErrorFallback.tsx  index.css  main.tsx  vite-end.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+168 files in other folders)
