[package]
name = "typeflow"
version = "0.1.0"
description = "Developer Typing Trainer"
authors = ["Akimasa Sugai"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/otomatty/typeflow"

[lib]
name = "typeflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

